2017-03-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotEvent.h: Move new enum GEPID (2017-02-25) to
	end of enum list rather than in the middle.  Otherwise the gnuplot_qt
	built for 5.0.6 is incompatible with gnuplot executables 5.0.0-5, which
	makes comparison of multiple versions to debug things harder than it
	needs to be.  If the new event is at the end, all earlier gnuplot 5.0.x
	versions can share gnuplot_qt 5.0.6.

2017-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data):  Defer initialization of parallel plot data
	structures so that it catches both "set style data parallel" and 
	"with parallel".  Example failure case:
	set style data parallel; plot 'silver.dat' using 1:2:3 lc var

2017-03-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/msvc/Makefile:  Support building 32 and 64 bit variants.
	Include Manifest files. HTML help compiler is located in 32 bit program
	folder.  

	* config/msvc/Makefile (#QTDIR, TOP, MOC, UIC, RCC, S, W, WX, Q)
	(T, D, M, {$(S)}.c.obj, {$(S)}.c.cobj, $(HELPFILE), doc2html.exe)
	($(M)bf_test.exe, demo_plugin.dll): Reduce slightly excessive use
	of double backslashes. Changes by Hans-Bernhard Broeker.

	* config/mingw/Makefile:  Enforce calling the lua executable instead
	of the lua wrapper script of Mingw64.

	* src/win/wgdiplus.cpp src/win/wgnuplib.h src/win/wtext.c
	src/wixterminal/wxt_gui.cpp term/caca.trm term/win.trm:  Eliminate a few
	compiler warnings.

2017-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (plot_command splot_command) src/gplt_x11.c
	src/qtterminal/QtGnuplotScene.cpp src/wxterminal/wxt_gui.cpp:

	The toggle status of all plots (plot visible or hidden) was being reset
	by some terminal drivers on every clear() event.  This caused the toggle
	state to be lost when the plot was rotated/panned and on refresh/replot.
	Now we do away with the automatic reset in the terminal drivers.