@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.336.2.37 2017/02/19 19:47:49 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.336.2.38 2017/03/05 18:37:36 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -48,6 +48,7 @@ static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.336.2.37 2017/02/19 19:47
 #include "interpol.h"
 #include "misc.h"
 #include "parse.h"
+#include "pm3d.h"	/* for is_plot_with_palette */
 #include "setshow.h"
 #include "tables.h"
 #include "tabulate.h"
@@ -3368,11 +3369,14 @@ eval_plots()
 	    axis_array[FIRST_Y_AXIS].max = axis_array[SECOND_Y_AXIS].max;
     }
 
-    /* June 2014 - This call was in boundary(), called from do_plot()
-     * but it caused problems if do_plot() itself was called for a refresh
-     * rather than for plot/replot.  So we call it here instead.
+    /* June 2014 - set_cbminmax was called from do_plot() via boundary()
+     * but it caused logscaling problems if do_plot() itself was called
+     * for a refresh rather than for plot/replot.  So we moved it here.
+     * March 2017 - but skip the whole thing if there is no palette.
      */
-    set_cbminmax();
+    set_plot_with_palette(0, MODE_PLOT);
+    if (is_plot_with_palette())
+	set_cbminmax();
 
     /* the following ~5 lines were moved from the end of the
      * function to here, as do_plot calles term->text, which
